force-app/main/default/objects/Whatsapp_Template__c/Whatsapp_Template__c.object-meta.xml
<CustomObject>
    <label>Whatsapp Template</label>
    <nameField>
        <displayFormat>WT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whatsapp Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>