force-app/main/default/objects/Whatsapp_Template__c/fields/API_Hit_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Hit_Status__c</fullName>
    <label>API Hit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>