force-app/main/default/objects/Whatsapp_Template__c/fields/Check_Template_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Template_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Template Status</label>
    <type>Checkbox</type>
</CustomField>