force-app/main/default/objects/Whatsapp_Template__c/fields/Contains_Document__c.field-meta.xml
<CustomField>
    <fullName>Contains_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Document</label>
    <type>Checkbox</type>
</CustomField>