force-app/main/default/objects/Whatsapp_Template__c/fields/Contains_Media__c.field-meta.xml
<CustomField>
    <fullName>Contains_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Media</label>
    <type>Checkbox</type>
</CustomField>