force-app/main/default/objects/Whatsapp_Template__c/fields/Document_Caption__c.field-meta.xml
<CustomField>
    <fullName>Document_Caption__c</fullName>
    <label>Document Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>