force-app/main/default/objects/Whatsapp_Template__c/fields/Media_HandleId__c.field-meta.xml
<CustomField>
    <fullName>Media_HandleId__c</fullName>
    <label>Media HandleId</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>