force-app/main/default/objects/Whatsapp_Template__c/fields/Message_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Action_Type__c</fullName>
    <label>Message Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QuickReplies</fullName>
            </value>
            <value>
                <fullName>CTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>