force-app/main/default/objects/Whatsapp_Template__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Whatsapp Templates</relationshipLabel>
    <relationshipName>Whatsapp_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>