force-app/main/default/objects/Whatsapp_Template__c/fields/Public_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Public_Link_1__c</fullName>
    <label>Public Link</label>
    <type>Url</type>
</CustomField>