force-app/main/default/objects/Whatsapp_Template__c/fields/Reply1__c.field-meta.xml
<CustomField>
    <fullName>Reply1__c</fullName>
    <label>Reply1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>