force-app/main/default/objects/Whatsapp_Template__c/fields/Sample_Text__c.field-meta.xml
<CustomField>
    <fullName>Sample_Text__c</fullName>
    <label>Sample Text</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>