force-app/main/default/objects/Whatsapp_Template__c/fields/Submit_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>