force-app/main/default/objects/Whatsapp_Template__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>