force-app/main/default/objects/Whatsapp_Template__c/fields/Template_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Template_Approval_Status__c</fullName>
    <label>Template Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>PENDING_DELETION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>