force-app/main/default/objects/Whatsapp_Template__c/fields/Template_Category__c.field-meta.xml
<CustomField>
    <fullName>Template_Category__c</fullName>
    <label>Template Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>OTP</fullName>
            </value>
            <value>
                <fullName>UTILITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>