force-app/main/default/objects/Whatsapp_Template__c/fields/Template_Kind__c.field-meta.xml
<CustomField>
    <fullName>Template_Kind__c</fullName>
    <label>Template Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>