force-app/main/default/objects/Whatsapp_Template__c/fields/Title_1__c.field-meta.xml
<CustomField>
    <fullName>Title_1__c</fullName>
    <label>Title 1</label>
    <type>TextArea</type>
</CustomField>