force-app/main/default/objects/Whatsapp_Template__c/fields/Type_1__c.field-meta.xml
<CustomField>
    <fullName>Type_1__c</fullName>
    <label>Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_To_Action_Type</valueSetName>
    </valueSet>
</CustomField>