force-app/main/default/objects/Whatsapp_Template__c/fields/Value_2__c.field-meta.xml
<CustomField>
    <fullName>Value_2__c</fullName>
    <label>Value 2</label>
    <type>TextArea</type>
</CustomField>