force-app/main/default/objects/Whatsapp_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Whatsapp_Template_Name__c</columns>
    <columns>Template_Approval_Status__c</columns>
    <columns>Object__c</columns>
    <columns>Project__c</columns>
    <columns>Template_ID__c</columns>
    <columns>Template_Kind__c</columns>
    <columns>API_Hit_Status__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>